cluster/apps/networking/traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "traefik"
  labels:
    name: "traefik"
